<resources>
    <string name="app_name">MapsTest</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="service_running">Service Running</string>
    <string name="service_stopped">Service Stopped</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="speed">Speed</string>
    <string name="duration_text">Duration</string>
    <string name="distance_text">Distance</string>
    <string name="address_text">Address:</string>
    <string name="save_trip_text">Save Trip</string>
    <string name="save_trip_dialog_summary">Are you sure want to stop tracking?</string>
    <string name="save_text">Save</string>
    <string name="allow_permission_text">Allow permission</string>
    <string name="permanently_denied_message">You have permanently denied permissions. Turn on from Settings.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="street_view_text">Street View</string>
</resources>